# openadapt-capture

./: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  test_viewer.html
.github/workflows/: test.yml
chrome_extension/: background.js  content.js
docs/images/: viewer.html
openadapt_capture/: __init__.py  browser_bridge.py  browser_events.py  capture.py  cli.py  config.py  input.py  plotting.py  recorder.py  samples.py  share.py  utils.py  video.py
openadapt_capture/db/: __init__.py  crud.py  models.py
openadapt_capture/extensions/: synchronized_queue.py
openadapt_capture/platform/: __init__.py  darwin.py  linux.py  windows.py
openadapt_capture/shared_ui/: __init__.py
openadapt_capture/storage/: __init__.py  sqlite.py
openadapt_capture/visualize/: html.py
openadapt_capture/window/: __init__.py  _linux.py  _macos.py  _windows.py
scripts/: compare_codecs.py  generate_readme_plots.py  generate_real_capture_plot.py  legacy_vs_new_benchmark.py  perf_test.py
tests/: __init__.py  test_browser_bridge.py  test_browser_capture_e2e.py  test_events.py  test_highlevel.py  test_performance.py  test_processing.py  test_processing_comprehensive.py  test_stats.py  test_storage.py  test_video.py
